docs/_static/config_examples/example-bigip-credentials-directory.yaml
# Sample configuration for k8s-bigip-ctlr. BIG-IP configuration is mounted
# from the secret store into the controller.
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: k8s-bigip-ctlr
  namespace: kube-system
spec:
  replicas: 1
  template:
    metadata:
      name: k8s-bigip-ctlr
      labels:
        app: k8s-bigip-ctlr
    spec:
      serviceAccountName: bigip-ctlr-serviceaccount
      containers:
        - name: k8s-bigip-ctlr
          image: "f5networks/k8s-bigip-ctlr"
          command: ["/app/bin/k8s-bigip-ctlr"]
          args: ["--running-in-cluster=true",
            "--credentials-directory=/tmp/creds",
            "--bigip-partition=k8s",
            "--namespace=default",
          ]
          volumeMounts:
          - name: bigip-creds
            mountPath: "/tmp/creds"
            readOnly: true
      volumes:
      - name: bigip-creds
        secret:
          secretName: bigip-credentials
    imagePullSecrets:
      - name: f5-docker-images
