docs/_static/config_examples/example-lwp-daemonset.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: lightweight-proxy
  namespace: kube-system
spec:
  template:
    metadata:
      labels:
        name: lightweight-proxy
    spec:
      hostNetwork: true
      containers:
        - name: proxy-plugin
          image: f5networks/f5-ci-beta:light-weight-proxy-v0.2.0
          args:
            - --config-file
            - /etc/configmap/lightweight-proxy.config.json
          securityContext:
            privileged: false
          volumeMounts:
          - mountPath: /var/run/kubernetes/proxy-plugin
            name: plugin-config
            readOnly: true
          - mountPath: /etc/configmap
            name: lwp-config
      volumes:
        - name: plugin-config
          hostPath:
            path: /var/run/kubernetes/proxy-plugin
        - name: lwp-config
          configMap:
            name: lwp-config
