docs/_static/config_examples/sample-f5-k8s-controller-secrets.yaml
# Sample configuration for f5-k8s-controller. BIG-IP configuration is pulled
# from the secret store and passed to the controller.
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: f5-k8s-controller
  namespace: kube-system
spec:
  replicas: 1
  template:
    metadata:
      name: f5-k8s-controller
      labels:
        app: f5-k8s-controller
    spec:
      containers:
        - name: f5-k8s-controller
          # Specify the path to your image here
          image: "docker-registry/username/f5-k8s-controller:latest"
          command: ["/app/bin/f5-k8s-controller"]
          args: ["--running-in-cluster=true",
            "--bigip-url=$(BIGIP_URL)",
            "--bigip-username=$(BIGIP_USERNAME)",
            "--bigip-password=$(BIGIP_PASSWORD)",
            "--pool-member-type=cluster"
          ]
