docs/_static/config_examples/sample-k8s-bigip-ctlr-secrets.yaml
# Sample configuration for k8s-bigip-ctlr. BIG-IP configuration is pulled
# from the secret store and passed to the controller.
# for Kubernetes 1.9 use apps/v1 see https://kubernetes.io/docs/reference/workloads-18-19
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: k8s-bigip-ctlr
  namespace: kube-system
  labels:
    app: k8s-bigip-ctlr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-bigip-ctlr
  template:
    metadata:
      name: k8s-bigip-ctlr
      labels:
        app: k8s-bigip-ctlr
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
    spec:
      serviceAccountName: bigip-ctlr-serviceaccount
      containers:
        - name: k8s-bigip-ctlr
          # Specify the path to your image here
          image: "docker-registry/username/k8s-bigip-ctlr:latest"
          command: ["/app/bin/k8s-bigip-ctlr"]
          args: ["--running-in-cluster=true",
            "--bigip-url=$(BIGIP_URL)",
            "--bigip-username=$(BIGIP_USERNAME)",
            "--bigip-password=$(BIGIP_PASSWORD)",
            "--bigip-partition=k8s",
            "--namespace=default",
            "--python-basedir=/app/python",
            "--log-level=INFO",
            "--verify-interval=30",
            "--use-node-internal=true",
            "--pool-member-type=nodeport",
            "--kubeconfig=./config"
          ]
          ports:
          - containerPort: 8080
      imagePullSecrets:
      - name: f5-docker-images
