docs/_static/config_examples/example-service-type-lb.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cis.f5.com/ipamLabel: test
  labels:
    app: svc-lb1
  name: svc-lb1
  namespace: default
spec:
  ports:
    - name: svc-lb1-80
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: svc-lb1
  type: LoadBalancer
