docs/_static/config_examples/example-openshift-default-ssl-profile.yaml
apiVersion: v1
kind: Route
metadata:
  labels:
    name: myService
    # Tells the BIG-IP Controller to watch Routes with a specific label.
    # Include the label in the k8s-bigip-ctlr Deployment under "args"
    # (for example, "--route-label=App1")
    f5type: App1
  name: myService-route-edge
  annotations:
    # See the k8s-bigip-ctlr documentation for information about
    # all Route Annotations
    # https://clouddocs.f5.com/products/connectors/k8s-bigip-ctlr/latest/#supported-route-annotations
    virtual-server.f5.com/balance: least-connections-member
spec:
  host: mysite.example.com
  path: "/myApp"
  port:
    targetPort: 443
  tls:
    certificate: |
      -----BEGIN CERTIFICATE-----
      [...]
      -----END CERTIFICATE-----
    key: |
      -----BEGIN PRIVATE KEY-----
      [...]
      -----END PRIVATE KEY-----
    caCertificate: |
      -----BEGIN CERTIFICATE-----
      [...]
      -----END CERTIFICATE-----
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  to:
    kind: Service
    name: myService
