docs/_static/config_examples/sample-reencrypt-route.yaml
apiVersion: v1
kind: Route
metadata:
  labels:
    name: svc1
  name: svc1-route-reencrypt
  namespace: default
  annotations:
    # Validate the server-side SSL connection.
    virtual-server.f5.com/secure-serverssl: "true"
spec:
  host: svc1-route.local
  path: "/test"
  port:
    targetPort: https
  tls:
    certificate: |
      -----BEGIN CERTIFICATE-----
      -----END CERTIFICATE-----
    key: |
      -----BEGIN PRIVATE KEY-----
      -----END PRIVATE KEY-----
    destinationCACertificate: |
      -----BEGIN CERTIFICATE-----
      -----END CERTIFICATE-----
    termination: reencrypt
  to:
    kind: Service
    name: svc1
    weight: 100
