docs/_static/config_examples/single-service-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress1
  namespace: default
  annotations:
    # Provide an IP address from the external VLAN on your BIG-IP device
    virtual-server.f5.com/ip: "10.190.25.70"
    # Specify the BIG-IP partition containing the virtual server
    virtual-server.f5.com/partition: "k8s"
    # Optionally specify the source address translation type of the virtual server
    virtual-server.f5.com/source-addr-translation: |
        {
          "type": "snat",
          "pool": "snat-pool"
        }
spec:
  backend:
    # The name of the Kubernetes Service you want to expose to external traffic
    serviceName: myService
    servicePort: 80
