docs/_static/config_examples/source-addr-translation-route.yaml
apiVersion: v1
kind: Route
metadata:
  labels:
    name: svc1
  name: svc1-route-unsecured
  namespace: default
  annotations:
    # This assumes that a snat pool example-snat has been preconfigured in the Common partition
    virtual-server.f5.com/source-addr-translation: |
      {
        "type": "snat",
        "pool": "/Common/example-snat"
      }
spec:
  host: svc1-route.local
  path: "/test"
  port:
    targetPort: 80
  to:
    kind: Service
    name: svc1
